--- a/firstpage.html
+++ b/firstpage.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Course notes example code</title>
+    <title>Birmingham 2022 Commonwealth Games</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,17 +13,7 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <style>
-        #map {
-            height: 100vh;
-        }
-
-        .test {
-            width: 500px;
-            height: 300px;
-        }
-    </style>
-
+    <link rel="stylesheet" href="firstpage.css">
     <!-- Google Maps -->
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQRTMuRO4K1AyH9fFr6zH7Kd2qSwz3Wuk&libraries=places"></script>
@@ -32,24 +22,28 @@
 </head>
 
 <body>
-    <div class="row pe-0">
+    <div class="row pe-0 ps-0">
         <div class="col-1 pe-0 bg-primary">
-            <div class="nav flex-column nav-pills w-100" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <a class="btn btn-primary p-3 rounded-0" href="firstpage.html">Home</a>
                 <a class="btn btn-primary p-3 rounded-0" href="index.html">2nd Page</a>
                 <a class="btn btn-primary p-3 rounded-0" href="index.html">Function 1</a>
                 <a class="btn btn-primary p-3 rounded-0" href="index.html">Function 2</a>
                 <a class="btn btn-primary p-3 rounded-0" href="index.html">Function 3</a>
                 <a class="btn btn-primary p-3 rounded-0" href="index.html">Filter</a>
-                <a class="btn btn-primary p-3 rounded-0" href="index.html">Filter</a>
+                <a class="btn btn-primary p-3 rounded-0" href="index.html">Sort</a>
             </div>
         </div>
         <div class="col-11 ps-0">
             <div class="container-fluid p-0">
-                <p class="h5 text-center">The 2022 Commonwealth Games will be held in Birmingham, UK, from 28th July to
-                    8th August.
-                </p>
+                <p class="h4 text-center pt-3 pb-3">The Birmingham 2022 Commonwealth Games</p>
+
                 <div id="map"></div>
+                <p class="h5 text-center pb-3">The Birmingham 2022 Commonwealth Games is a West Midlands
+                    Celebration with Birmingham at its heart. The venues being used for the Games stretch from Coventry,
+                    Solihull, and Royal Leamington Spa to Cannock Chase Forest, Royal Sutton Coldfield, and
+                    Wolverhampton.
+                </p>
             </div>
         </div>
     </div>
