--- a/firstpage.html
+++ b/firstpage.html
@@ -41,6 +41,9 @@
                         <div class="form-label text-start">Start:</div>
                         <input class="form-control" id=start type=text>
 
+                        <div class="form-label text-start">Midpoint:</div>
+                        <input class="form-control" id=midpoint type=text>
+
                         <div class="form-label text-start">End:</div>
                         <input class="form-control" id=end type=text>
 
