draggable point, search by name done

--- a/firstpage.html
+++ b/firstpage.html
@@ -86,6 +86,7 @@
                     </div>
                 </div>
                 <details id=directions class="container bg-light">
+                    <p>Total Distance: <span id="total"></span></p>
                     <summary>Directions</summary>
                 </details>
             </div>
